--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Инжиниринг систем безопасности — Главная</title>
-  <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
+  <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64,"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"/>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <script>
     tailwind.config = {
@@ -26,24 +27,18 @@
             "border-dark": "#374151"
           },
           fontFamily: { display: ["Inter", "sans-serif"] },
-          borderRadius: {
-            DEFAULT: "0.5rem",
-            lg: "0.75rem",
-            xl: "1rem",
-            full: "9999px"
-          }
+          borderRadius: { DEFAULT: "0.5rem", lg: "0.75rem", xl: "1rem", full: "9999px" }
         }
       }
     }
   </script>
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+  <style>body { font-family: 'Inter', sans-serif; }</style>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-foreground-light dark:text-foreground-dark">
   <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
-    <!-- Header -->
-    <div data-include="/partials/header.html"></div>
+
+    <!-- Header include -->
+    <div data-include="partials/header.html"></div>
 
     <main class="flex-grow">
       <!-- Hero -->
@@ -167,7 +162,7 @@
             </div>
             <!-- Project 3 -->
             <div class="group overflow-hidden rounded-lg border border-border-light dark:border-border-dark">
-              <div class="w-full h-56 bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBz8RgMxdtbXr5-cSyprSmLOiE6EshVK1JIcl7KGQYaiVcLhAiEN-JYkx8yBSGsMkfVCQnTmFSN4xJziJjAhtn31EE1m3REw6dI1hleQvVGYafQ-g5JjA3J2F8LgzHFyxqppPrjQcCbL_1ZHyvasKUhG0eFT1rC3mN0Iok3hurURTJyPmIhSQKwTlrAtRLCmlVDVhfAvEHYXcGyJZFTF7m2VZoX78nL4WMwVkgmYz92dViOR_Kty1pFVzhr2M6NJoLwe3wM5aNWTLLn");'></div>
+              <div class="w-full h-56 bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBz8RgMxdtbXr5-cSyprSmLOiE6EshVK1JIcl7KGQYaiVcLhAiEN-JYkx8yBSGsMkfVCQnTmFSN4xJziJjAhtn31EE1m3REw6dI1hleQvVGYafQ-g5JjA3J2F8LgzHFyxqppPrjQcCbL_1ZHyvasKUhG0eFT1rC3mN0Iok3hurURTJyPmIhSQKwTlrAtRLCmlVDVhfAvEHYXcGyJZFTF7m2VZoX78нL4WMwVkgmYz92dViOR_Kty1pFVzhr2M6NJoLwe3wM5aNWTLLn");'></div>
               <div class="p-6 bg-background-light dark:bg-background-dark">
                 <h3 class="text-lg font-bold">Жилой комплекс</h3>
                 <p class="mt-1 text-sm text-subtle-light dark:text-subtle-dark">Интегрированная система безопасности «под ключ».</p>
@@ -188,7 +183,7 @@
             <p class="mt-2 text-lg text-subtle-light dark:text-subtle-dark">Гарантия качества и надёжности.</p>
           </div>
           <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-8 items-center">
-            <div class="grayscale hover:grayscale-0 transition duration-300 aspect-square bg-center bg-no-repeat bg-contain" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD6UfUGek3kNF_Y5TWEFIDD2fQWXrBKI1ceslzXwHeEnkWVHoj3M29r-ybRcYIJD-7TaJroXxok5a7NvysoIymS3QGDclP3seLZbRl_Yqo7o5iA5ZIFalWbOxxoKp-dSdenJOBUKLEl7J5voCHGHCplbga_4Rou9lrCmLlzTlfPPxNna9S7LlaMW53AT-tgpey8urZijJPCZ_dxsZa3oMH8wdevOqfc5X2xFuU3gfZ3-B4VfcXTBY3WRIMEh5QDoHdAC6STK4wg8vTn");'></div>
+            <div class="grayscale hover:grayscale-0 transition duration-300 aspect-square bg-center bg-no-repeat bg-contain" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD6UfUGek3kNF_Y5TWEFIDD2fQWXrBKI1ceslzXwHeEnkWVHoj3M29r-ybRcYIJD-7TaJroXxok5a7NvysoIymS3QGDclP3seLZbRl_Yqo7o5iA5ZIFalWbOxxoKp-dSdenJOBUKLEl7J5voCHGHCplbga_4Rou9lrCmLlзTlfPPxNna9S7LlaMW53AT-tgpey8urZijJPCZ_dxsZa3oMH8wdevOqfc5X2xFuU3gfZ3-B4VfcXTBY3WRIMEh5QDoHdAC6STK4wg8vTn");'></div>
             <div class="grayscale hover:grayscale-0 transition duration-300 aspect-square bg-center bg-no-repeat bg-contain" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAjyIzJJMW881xb6DN-EQDUMvFfOEWaz6f4ojvdcd4H-VMPSPreLBWaiNfpPJZuYNhu0-Q322H7vUw0U-YeSLSICFOBZ7xidUfY4jOMw4dUWORWVmJ7LzqClLAwf0XRzir16G4EjAui7MnL5Cp01jqisIPVvFqAfBxRe8gDWBSCwq9fpLzyoyTTx9r4xmUrrZNhLsb385b3HcHYu8rTtdb5JbgPs9a8jhRLLKAe4jDI_14tj3E-ScnotAu1e-2WsKgPGcPFiBpW3LN0");'></div>
             <div class="grayscale hover:grayscale-0 transition duration-300 aspect-square bg-center bg-no-repeat bg-contain" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBlUxC7bjdDZ99TgjIm3HHdYfHUgQouDUvSYoOpbbTD_S7_ng5PZ-AZ0-SW15gMLa6pIfKuRw9vX6PUXzZBt-wVj2_rTbXj7qNKSB9phgQm6SHxgcimR19IjJSYUysFv8DOtH-nvi2-cMS5W8TPqKFlwM9s-APwrY0QD4rQhGOsvDQDmo_2d9CReO7Lb2s1amKWgCRlB9hmZr3QpYLLHkg1j81z4wE1bdWMZIaedyXbjyrFbM7P4qeuzb1NUVunvvhJBbEJCB37ZEN3");'></div>
             <div class="grayscale hover:grayscale-0 transition duration-300 aspect-square bg-center bg-no-repeat bg-contain" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC34oc2c6xkgI3dJd7Q-Wz9H_4Qm-cI_LztSIttfUZ3ORCKZPs03Y1t3fVHNrJ_9WX4Jp7gjUkwsHyHWac3F4r2ZPqRQxwz1UcuKWAi8gon_-VgAgQb2AMcg5-cA7-11CGF6gqcVgcOJN7Ak8dm0FQy_WTcPASbDNrPnk_6vBMNBpsY0BRbR0rsal0dygKm1CxD2yb3nk9KQ78kwtzmUb598bcmLl9QmEVmpKAyHSnNYb_5o6QmuE1pLiElNQlzMEyP666w7nB_OWME");'></div>
@@ -211,16 +206,16 @@
             </div>
             <a href="contacts.html#contact-form" class="mt-6 inline-flex items-center justify-center rounded-lg h-12 px-6 bg-primary text-white text-base font-bold tracking-wide hover:bg-primary/90 transition-colors">Открыть форму</a>
           </div>
-          <div class="w-full aspect-video bg-cover bg-center rounded-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAD2B6dWLBfivbyN6nE-9eLV1ch2v3yrsdVm-Lng3mO_zBQ9rDGRnxyU5ETPb1jX40DTCltya9NOm-ghR-F1IbgnxDHA9LdLhWAsx-RDkRSgXNKVvJac2_b6Th67pmEQXq-MmTKpdn5ci9qQY6nuXaJZ0Yz3NV4sB0D2tSCMUVb5AXeZh5d3kW38O2E1kqe1LJQm8RRXHwIIxD_ZRJOLl5okOpgNASY8eF7oEX3mSEBUt6eCzEdJAH4G9YkuFUtyPnqkXnE-SjUjY3N");'></div>
+          <div class="w-full aspect-video bg-cover bg-center rounded-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAD2B6dWLBfivbyN6nE-9eLV1ch2v3yrsdVm-Lng3mO_zBQ9rDGRнxyU5ETPb1jX40DTCltya9NOm-ghR-F1IbgnxDHA9LdLhWAsx-RDkRSgXNKVvJac2_b6Th67pmEQXq-MmTKpdn5ci9qQY6nuXaJZ0Yz3NV4sB0D2tSCMUVb5AXeZh5d3kW38O2E1kqe1LJQm8RRXHwIIxD_ZRJOLl5okOpgNASY8eF7oEX3mSEBUt6eCzEdJAH4G9YkuFUtyPnqkXнE-SjUjY3N");'></div>
         </div>
       </section>
     </main>
 
     <!-- Footer include -->
-    <div data-include="/partials/footer.html"></div>
+    <div data-include="partials/footer.html"></div>
   </div>
 
-  <!-- Скрипт инклюда (подставит хедер/футер и активирует навигацию) -->
-  <script src="/assets/include.js"></script>
+  <!-- ВАЖНО: относительный путь -->
+  <script src="assets/include.js"></script>
 </body>
 </html>
