--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body class="bg-background-light dark:bg-background-dark font-display text-foreground-light dark:text-foreground-dark">
   <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
     <!-- Header -->
-    <div data-include="/partials/header.html"></div>
+    <div data-include="partials/header.html"></div>
 
     <main class="flex-grow">
       <!-- Hero -->
@@ -217,7 +217,7 @@
     </main>
 
     <!-- Footer include -->
-    <div data-include="/partials/footer.html"></div>
+    <div data-include="partials/footer.html"></div>
   </div>
 
   <!-- Скрипт инклюда (подставит хедер/футер и активирует навигацию) -->
