--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
   <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
 
     <!-- Header -->
-    <div data-include="/partials/header.html"></div>
+    <div data-include="partials/header.html"></div>
 
     <main class="flex-grow">
       <!-- Вводный блок -->
@@ -146,7 +146,7 @@
     </main>
 
     <!-- Footer include -->
-    <div data-include="/partials/footer.html"></div>
+    <div data-include="partials/footer.html"></div>
   </div>
 
   <!-- Скрипт инклюда (подставит хедер/футер и активирует навигацию) -->
