--- a/projects.html
+++ b/projects.html
@@ -40,55 +40,7 @@
   <div class="min-h-screen flex flex-col">
 
     <!-- Header (единый) -->
-    <header class="sticky top-0 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm z-10 border-b border-border-light dark:border-border-dark">
-      <div class="max-w-[1200px] mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex items-center justify-between h-16">
-          <a href="index.html" class="flex items-center gap-3">
-            <span class="inline-flex text-primary">
-              <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                <path d="M12 1.5L2 7.5V16.5L12 22.5L22 16.5V7.5L12 1.5ZM4 8.6L12 13.2L20 8.6L12 4L4 8.6ZM12 14.8L4 10.2V15.4L12 20.1V14.8ZM14 20.1L20 15.4V10.2L12 14.8L14 20.1Z"></path>
-              </svg>
-            </span>
-            <span class="text-base sm:text-lg font-bold">Инжиниринг систем безопасности</span>
-          </a>
-
-          <!-- Desktop nav -->
-          <nav class="hidden md:flex items-center gap-6">
-            <a class="text-sm font-medium hover:text-primary transition-colors" href="about.html">О нас</a>
-            <a class="text-sm font-medium hover:text-primary transition-colors" href="services.html">Услуги</a>
-            <a class="text-sm font-bold text-primary" href="projects.html">Проекты</a>
-            <a class="text-sm font-medium hover:text-primary transition-colors" href="contacts.html#licenses">Сертификаты</a>
-            <a class="text-sm font-medium hover:text-primary transition-colors" href="contacts.html">Контакты</a>
-          </nav>
-
-          <div class="hidden md:flex items-center">
-            <a href="contacts.html#contact-form" class="bg-primary text-white font-bold py-2 px-4 rounded-lg text-sm hover:bg-primary/90 transition-colors">
-              Запросить КП
-            </a>
-          </div>
-
-          <!-- Mobile menu button -->
-          <button id="menuBtn" class="md:hidden inline-flex items-center justify-center rounded-lg p-2 border border-border-light dark:border-border-dark">
-            <span class="sr-only">Открыть меню</span>
-            <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <!-- Mobile nav -->
-      <nav id="mobileNav" class="md:hidden hidden border-t border-border-light dark:border-border-dark">
-        <div class="max-w-[1200px] mx-auto px-4 py-3 flex flex-col gap-2">
-          <a class="py-2 text-sm font-medium hover:text-primary transition-colors" href="about.html">О нас</a>
-          <a class="py-2 text-sm font-medium hover:text-primary transition-colors" href="services.html">Услуги</a>
-          <a class="py-2 text-sm font-bold text-primary" href="projects.html">Проекты</a>
-          <a class="py-2 text-sm font-medium hover:text-primary transition-colors" href="contacts.html#licenses">Сертификаты</a>
-          <a class="py-2 text-sm font-medium hover:text-primary transition-colors" href="contacts.html">Контакты</a>
-          <a class="py-2 text-sm font-bold text-white bg-primary rounded-lg text-center hover:bg-primary/90 transition-colors" href="contacts.html#contact-form">Запросить КП</a>
-        </div>
-      </nav>
-    </header>
+    <div data-include="partials/header.html"></div>
 
     <!-- Main -->
     <main class="flex-grow">
@@ -218,33 +170,11 @@
       </section>
     </main>
 
-    <!-- Footer (единый) -->
-    <footer class="border-t border-border-light dark:border-border-dark bg-background-light/60 dark:bg-background-dark/60">
-      <div class="max-w-[1200px] mx-auto py-10 px-4 sm:px-6 lg:px-8">
-        <div class="flex flex-col md:flex-row justify-between items-center gap-6">
-          <nav class="flex flex-wrap justify-center gap-x-6 gap-y-2 md:order-2">
-            <a class="text-sm text-subtle-light dark:text-subtle-dark hover:text-primary transition-colors" href="about.html">О нас</a>
-            <a class="text-sm text-subtle-light dark:text-subtle-dark hover:text-primary transition-colors" href="services.html">Услуги</a>
-            <a class="text-sm text-subtle-light dark:text-subtle-dark hover:text-primary transition-colors" href="projects.html">Проекты</a>
-            <a class="text-sm text-subtle-light dark:text-subtle-dark hover:text-primary transition-colors" href="contacts.html#licenses">Сертификаты</a>
-            <a class="text-sm text-subtle-light dark:text-subtle-dark hover:text-primary transition-colors" href="contacts.html">Контакты</a>
-          </nav>
-          <p class="text-sm text-subtle-light dark:text-subtle-dark md:order-1">© 2025 Инжиниринг систем безопасности. Все права защищены.</p>
-        </div>
-        <div class="mt-6 text-center text-xs text-subtle-light dark:text-subtle-dark">
-          <p>УНП 123456789. г. Минск, ул. Примерная, 1, офис 101.</p>
-        </div>
-      </div>
-    </footer>
+    <!-- Footer include -->
+    <div data-include="partials/footer.html"></div>
   </div>
 
-  <script>
-    // Мобильное меню (единое для сайта)
-    const menuBtn = document.getElementById('menuBtn');
-    const mobileNav = document.getElementById('mobileNav');
-    if (menuBtn && mobileNav) {
-      menuBtn.addEventListener('click', () => mobileNav.classList.toggle('hidden'));
-    }
-  </script>
+  <!-- Скрипт инклюда (подставит хедер/футер и активирует навигацию) -->
+  <script src="assets/include.js"></script>
 </body>
 </html>
