--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <section class="py-16 px-4 sm:px-6 lg:px-8">
         <div class="mx-auto max-w-[1200px] grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
           <div>
-            <h2 class="text-3xl font-bold tracking-tight">Свяжитесь с нами</h2>
+            <h2 class="text-3xl font-bold tracking-tight">Готовы к диалогу? - Свяжитесь с нами</h2>
             <p class="mt-2 text-lg text-subtle-light dark:text-subtle-dark">Ответим на любые вопросы и подготовим КП.</p>
             <div class="mt-6 space-y-2 text-subtle-light dark:text-subtle-dark">
               <p><b>Адрес:</b> г. Минск, ул. Примерная, 1, офис 101</p>
