--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h1 class="text-4xl sm:text-5xl md:text-6xl font-black leading-tight tracking-tight">Инжиниринг систем безопасности</h1>
             <p class="mt-4 text-lg text-white/90">Комплексные решения: проектирование, внедрение и обслуживание. Защита вашего бизнеса на всех этапах.</p>
             <div class="mt-8 flex flex-wrap gap-4">
-              <a href="services.html" class="rounded-lg h-12 px-6 bg-primary text-white text-base font-bold tracking-wide hover:bg-primary/90 transition-colors">Наши услуги</a>
-              <a href="contacts.html" class="rounded-lg h-12 px-6 bg-white/10 text-white backdrop-blur-sm border border-white/20 text-base font-bold tracking-wide hover:bg-white/20 transition-colors">Связаться с нами</a>
+              <a href="services.html" class="rounded-lg px-6 py-3 bg-primary text-white text-base font-bold tracking-wide hover:bg-primary/90 transition-colors">Наши услуги</a>
+              <a href="contacts.html" class="rounded-lg px-6 py-3 bg-white/10 text-white backdrop-blur-sm border border-white/20 text-base font-bold tracking-wide hover:bg-white/20 transition-colors">Связаться с нами</a>
             </div>
           </div>
         </div>
