--- a/about.html
+++ b/about.html
@@ -108,38 +108,55 @@
         <div class="mx-auto max-w-[1200px] px-4 sm:px-6 lg:px-8">
           <div class="rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark p-8">
             <h2 class="text-3xl font-bold text-center mb-10">Наша команда</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-x-8 gap-y-12">
-              <div class="text-center">
-                <img alt="Алексей Петров" class="mx-auto h-40 w-40 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD6ALDgzxBD9urG91UTc9inE2gqCD5GQO9uyYLsG3hMVg7_eE8V4OeatfWTnLAEYkhWMC7NdhB7PvuktFlOcaWzcStzeHFwrdzQYCkmTERK3Z_pc323C_pVKhb9AIi5MVBPDAnn8_jXUPKFa75XpTeRRFfbxL6dywYK7js4MhHMXtrDHCK4VCMPPbtHgu1OihWWGcG6D4bHvssHF59eVmRYAF2UYsSbxYWJCyCVWDKpxp5UZps3gCyGg490AasjpBCOp7lGETmanakj"/>
-                <h3 class="mt-4 text-xl font-bold">Алексей Петров</h3>
-                <p class="mt-1 text-primary">Главный инженер</p>
-              </div>
-              <div class="text-center">
-                <img alt="Дмитрий Смирнов" class="mx-auto h-40 w-40 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCi6OHLcNMHsCOLD-rnVuWMqzBJZ7Sqe99wMy7oN1hZxATeAA4odMJZ10qahDfMDB3ms2tk9B6hhJL7DSx5Awi5C6ZoKmArnHJNRycMu5gPdwI5aksOSrCQiymSFVPaHgbK9evNpp4Eml8g1м7MbqEQZCJQnnV8CjMhokSjopoBK7CbtkQENpZ6kqZiXi1LJd6pFSDN2eEo_EW2ybfYWIlVixhYnC8Gt4JINvuaz51KLgc750C4HuPZd4QS4f-kZQdWJy9iyl48_7fS"/>
-                <h3 class="mt-4 text-xl font-bold">Дмитрий Смирнов</h3>
-                <p class="mt-1 text-primary">Менеджер проектов</p>
-              </div>
-              <div class="text-center">
-                <img alt="Елена Иванова" class="mx-auto h-40 w-40 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuClEtcfMc5sWehndHyQyvtCoGrykC7VmnkFzo18wcLi1WVT1q6ouMeVV6WHmIk1RnGZtpSSm5PgcyMiLss1FKo1LkRn62x25HPrpMXZbzPiMbJHHrlsnIf4brlldEEedOlP4yW5YIFswy0VWGi_PO6Oum15rxkGULtPsKB6c4OimjVnWzuL4aCL2HpAB64rSFunwzaSG0ptaxPWGbaiYczu8uxtq32SnFPuOIGYNHpMBllkJwKeCfdJVRd9v3jkTVi9J6dfHdetCyOe"/>
-                <h3 class="mt-4 text-xl font-bold">Елена Иванова</h3>
-                <p class="mt-1 text-primary">Ведущий техник</p>
-              </div>
-              <div class="text-center">
-                <img alt="Сергей Козлов" class="mx-auto h-40 w-40 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDgiraQAWBZZLAA9bQJXWxSmCnJ1iDUKYdd1BVluUffYNfTDaz8-CJzGt0BcH3Y2ywJOFBFOeIo3XcTJps-2Sb9VXGuyGVmjpuzI6jmoz7jm0N3VNXwtMDVZRUзR7ckEB9HXRYOFRsV72Yt27yMFJiIOklpX71cmTL5tsEeWrV7gFSXQEuCseEfABqlziCO480FlZ_9EfL0B_b4YF4WTnIHiHzlxjS2RUZlkDzu2XahKWUEsl0-Ly9wG-UEmlA502n95epQtLsbN69W"/>
-                <h3 class="mt-4 text-xl font-bold">Сергей Козлов</h3>
-                <p class="mt-1 text-primary">Консультант по безопасности</p>
-              </div>
-              <div class="text-center">
-                <img alt="Мария Сидорова" class="mx-auto h-40 w-40 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD02v8c4Brzh7v7pHgQlwHcmY5JWuIIe7q7Va6T2uZK__RMGWRde9aVgnrnlADPXPo4ko7RnLwp4BSsw4XXfpe5CosyWUVlo6ZVqza7rlH-lnR_6Nd634pisdwLOmHfSwYCT-Ps2iLPFSkMIYWLwcsJ4hknMLYз0pCNdIUOrLUFR6h57x6NRKaat82CRvBAznwQTAKxSQE7iUAZNyK2X7RunZ_vJIl6CFJYPsn2SzMkxBhSf8oxwgmhC_ZHbmS1HMth4H4Gg8raeZBm"/>
-                <h3 class="mt-4 text-xl font-bold">Мария Сидорова</h3>
-                <p class="mt-1 text-primary">Проектировщик систем</p>
-              </div>
-              <div class="text-center">
-                <img alt="Андрей Волков" class="mx-auto h-40 w-40 rounded-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDu1kAu0jbWUHdEhIGnwtKRgrNeXU8fl3zhhmq3wq6D4LT9_WZPI67gHw3LX_IbQvDgmWcVBk3eEvIwRLkзExm2WIqBi1ODmO-0OywOsBFcku7jV6skiIeMLShtDT4JZS0cIpHi34L5ye6AmrhnbnPBHz24NMq-tDisw2KHcoYGK-G4C7GfMrsgX35aRPmEanMv79QU0xyQZJdUU4vr-Y937he62GlBG5SeXgu-ow_rc_8Lsle0IflYdbhb-Mn_CkgOdwidjwWKq0HI"/>
-                <h3 class="mt-4 text-xl font-bold">Андрей Волков</h3>
-                <p class="mt-1 text-primary">Руководитель монтажных работ</p>
-              </div>
-            </div>
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-x-8 gap-y-12">
+  <div class="text-center">
+    <img alt="Алексей Петров" loading="lazy"
+         class="mx-auto h-40 w-40 rounded-full object-cover"
+         src="https://i.pravatar.cc/160?img=12" />
+    <h3 class="mt-4 text-xl font-bold">Алексей Петров</h3>
+    <p class="mt-1 text-primary">Главный инженер</p>
+  </div>
+
+  <div class="text-center">
+    <img alt="Дмитрий Смирнов" loading="lazy"
+         class="mx-auto h-40 w-40 rounded-full object-cover"
+         src="https://i.pravatar.cc/160?img=15" />
+    <h3 class="mt-4 text-xl font-bold">Дмитрий Смирнов</h3>
+    <p class="mt-1 text-primary">Менеджер проектов</p>
+  </div>
+
+  <div class="text-center">
+    <img alt="Елена Иванова" loading="lazy"
+         class="mx-auto h-40 w-40 rounded-full object-cover"
+         src="https://i.pravatar.cc/160?img=47" />
+    <h3 class="mt-4 text-xl font-bold">Елена Иванова</h3>
+    <p class="mt-1 text-primary">Ведущий техник</p>
+  </div>
+
+  <div class="text-center">
+    <img alt="Сергей Козлов" loading="lazy"
+         class="mx-auto h-40 w-40 rounded-full object-cover"
+         src="https://i.pravatar.cc/160?img=33" />
+    <h3 class="mt-4 text-xl font-bold">Сергей Козлов</h3>
+    <p class="mt-1 text-primary">Консультант по безопасности</p>
+  </div>
+
+  <div class="text-center">
+    <img alt="Мария Сидорова" loading="lazy"
+         class="mx-auto h-40 w-40 rounded-full object-cover"
+         src="https://i.pravatar.cc/160?img=57" />
+    <h3 class="mt-4 text-xl font-bold">Мария Сидорова</h3>
+    <p class="mt-1 text-primary">Проектировщик систем</p>
+  </div>
+
+  <div class="text-center">
+    <img alt="Андрей Волков" loading="lazy"
+         class="mx-auto h-40 w-40 rounded-full object-cover"
+         src="https://i.pravatar.cc/160?img=32" />
+    <h3 class="mt-4 text-xl font-bold">Андрей Волков</h3>
+    <p class="mt-1 text-primary">Руководитель монтажных работ</p>
+  </div>
+</div>
           </div>
         </div>
       </section>
